--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,4 +24,11 @@ jobs:
       - name: Run Jest Tests
         run: npm test 
 
-
+- name: Upload Test Report
+        # ใช้ 'always()'
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: jest-test-report
+          path: coverage/
+          retention-days: 5
